<resources>
    <string name="app_name">WeatherApp</string>

    //notification
    <string name="notification_update_favorite_forecast_title">Weather App</string>
    <string name="notification_update_favorite_forecast_content">Updating forecast fore favorite locations…</string>

    // common
    <string name="no_connection_msg">No internet connection</string>
    <string name="loading_progress">Loading…</string>

    // action
    <string name="action_try_again">Try again</string>
    <string name="action_view_weather">View weather</string>

    // error
    <string name="error_cant_get_location">Can\'t get your device location data</string>
    <string name="error_city_not_found">Not found</string>
    <string name="error_while_loading_forecast">Some error happened while the forecast was loading. Please try again.</string>

    // main screen
    <string name="main_screen_tab_current_location">Current Location</string>
    <string name="main_screen_tab_all_locations">Locations</string>

    // current location screen
    <string name="search_location_progress">Turn on device location service in settings.\nSearching device location…</string>
    <string name="current_location_short_data_cel">%1$s: %2$s °C, %3$s</string>
    <string name="current_location_short_data_far">%1$s: %2$s °F, %3$s</string>

    // favorite list
    <string name="favorite_location_short_data_cel">%1$s °C, %2$s</string>
    <string name="favorite_location_short_data_far">%1$s °F, %2$s</string>
    <string name="favorite_location_no_items_message">No items to display</string>
    <string name="favorite_location_search_hint">City name</string>

    // forecast details
    <string name="forecast_details_today">Today</string>
    <string name="forecast_details_tomorrow">Tomorrow</string>
    <string name="forecast_details_five_days">5 days</string>
    <string name="forecast_details_description_time">Time:</string>
    <string name="forecast_details_description_view">View:</string>
    <string name="forecast_details_description_temp">Temperature:</string>
    <string name="forecast_details_description_pressure">Pressure:</string>
    <string name="forecast_details_description_wind">Wind, m/s:</string>
    <string name="forecast_details_description_humidity">Humidity, %:</string>

    // search city screen
    <string name="search_city_screen_title">Check weather for</string>
    <string name="search_city_screen_location_hint">Enter location</string>
    <string name="search_city_screen_searching_location_hint">Searching location…</string>
    <string name="search_city_screen_unit_type">°C/°F</string>
    <string name="search_city_screen_favorite">Favorite</string>

</resources>
