<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/default_view_margin"
    android:layout_marginEnd="@dimen/default_view_margin"
    android:gravity="end"
    android:orientation="vertical">

    <TextView
        style="@style/SimpleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_view_margin"
        android:text="@string/forecast_details_description_time" />

    <TextView
        style="@style/SimpleText"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/forecast_icon_size"
        android:layout_marginTop="@dimen/default_view_margin"
        android:gravity="center"
        android:text="@string/forecast_details_description_view" />

    <TextView
        style="@style/SimpleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_view_margin"
        android:text="@string/forecast_details_description_temp" />

    <TextView
        style="@style/SimpleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_view_margin"
        android:text="@string/forecast_details_description_pressure" />

    <TextView
        style="@style/SimpleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_view_margin"
        android:text="@string/forecast_details_description_wind" />

    <TextView
        style="@style/SimpleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_view_margin"
        android:text="@string/forecast_details_description_humidity" />

</LinearLayout>