<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.example.weatherapp.common.view.ForecastDetailsToolbarButton
        android:id="@+id/btn_forecast_details_toolbar_today"
        style="@style/ForecastDetailsToolbarButton"
        android:layout_margin="@dimen/default_view_margin"
        android:text="@string/forecast_details_today"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_forecast_details_toolbar_tomorrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.weatherapp.common.view.ForecastDetailsToolbarButton
        android:id="@+id/btn_forecast_details_toolbar_tomorrow"
        style="@style/ForecastDetailsToolbarButton"
        android:layout_margin="@dimen/default_view_margin"
        android:text="@string/forecast_details_tomorrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_forecast_details_toolbar_several_days"
        app:layout_constraintStart_toEndOf="@+id/btn_forecast_details_toolbar_today"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.weatherapp.common.view.ForecastDetailsToolbarButton
        android:id="@+id/btn_forecast_details_toolbar_several_days"
        style="@style/ForecastDetailsToolbarButton"
        android:layout_margin="@dimen/default_view_margin"
        android:text="@string/forecast_details_five_days"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_forecast_details_toolbar_tomorrow"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>